Rename to Latitude Shortcuts

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.rgpike.latitudecheckin"
+      package="com.rgpike.latitudeshortcuts"
       android:versionCode="1"
       android:versionName="0.5.0">
 
@@ -12,7 +12,7 @@
         android:icon="@drawable/ic_launcher"
         >
 
-        <activity android:name=".LatitudeCheckIn"
+        <activity android:name=".LatitudeShortcuts"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
