--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.rgpike.latitudeshortcuts"
-      android:versionCode="7"
-      android:versionName="0.6.0">
+      android:versionCode="8"
+      android:versionName="0.6.1">
 
       <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
 
@@ -22,9 +22,13 @@
 
         <activity android:name=".ShortcutsActivity" />
 
+        <activity android:name=".FBShortcuts" />
+
         <activity android:name=".LaunchersActivity" />
 
-		<activity android:name=".WidgetChooser"
+        <activity android:name=".ShortcutPicker" />
+
+		<activity android:name=".WidgetFragmentWrapper"
 			android:label="@string/widget_chooser"
         	android:icon="@drawable/ic_launcher" >
 			>
