--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,5 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".ShortcutsActivity" />
+        <activity android:name=".LaunchersActivity" />
+
     </application>
 </manifest> 
